--- a/profileUser/templates/profileUser/base.html
+++ b/profileUser/templates/profileUser/base.html
@@ -11,7 +11,7 @@
     <a href="{% url 'logout' %}">Logout</a>
     <a href="{% url 'register' %}">Register</a>
     <a href="{% url 'login' %}">Login</a>
-    <a href="#">Мой профиль</a>
+    <a href="{% url 'userpage' %}">My profile</a>
     <p>Hello</p>
 </body>
 </html>
